--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,6 +12,16 @@ jobs:
           node-version: "20"
       - run: npm ci
       - run: npm test
+      - run: npm run build
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: |
+            dist/**/*
+            types/**/*
+            package.json
+
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
