--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "A helper library to test GLSL code within a unit test environment",
   "version": "0.1.1",
   "type": "module",
+  "license": "MIT",
   "files": [
     "dist",
     "types"
